syntax = "proto3";

package auth.login.oauth.v1;

import "common/provider/v1/provider.proto";
import "third_party/validate/validate.proto";

option go_package = "mandacode.com/accounts/proto/auth/login/oauth/v1;oauthloginv1";

service OAuthLoginService {
  // Login a user with OAuth provider
  rpc Login(LoginRequest) returns (LoginResponse);
}

//
// Login messages
//
message LoginRequest {
  common.provider.v1.OAuthProvider provider = 1; // OAuth provider enum
  string access_token = 2 [
    (validate.rules).string = {min_len : 1}
  ]; // Access token from the OAuth provider
}

message LoginResponse {
  string access_token = 1 [
    (validate.rules).string = {min_len : 1}
  ]; // Generated access token for the user
  string refresh_token = 2 [
    (validate.rules).string = {min_len : 1}
  ]; // Generated refresh token for the user
}
